Fixed scrollbar for cross browsers

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,14 @@
 html {
   font-size: 62.5%;
 }
+
+body {
+  padding-top: 2.4rem;
+  background: linear-gradient(to right bottom, var(--color-2), var(--color-1));
+}
+
+@media only screen and (max-width: 760px) {
+  body {
+    padding-top: 0;
+  }
+}
